--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
 }
 
-h1 {
+h1,h2,h3 {
     font-family: 'Yeseva One', cursive;
     font-weight: 300;
 }
@@ -173,4 +173,31 @@ a {
     justify-content: space-evenly;
     list-style: none;
     padding-left: 0;
+}
+
+
+
+/* Menu */
+#menu {
+    background-image: url("/Assets/Img/menu_pattern.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 800px;
+}
+
+.menucard-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.menu-right,
+.menu-left {
+    margin: 2.5em 4em;
+}
+
+.dish{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px solid #dab33e;
 }
