--- a/style.css
+++ b/style.css
@@ -26,12 +26,16 @@ p {
     margin: auto;
 }
 
+#wrapper {
+    width: 100%;
+    overflow: hidden;
+}
 
 
 /* Navigation */
 .nav-header {
     height: 800px;
-    background-image: url("/Assets/Img/bg-header.jpg");
+    background-image: url("./Assets/Img/bg-header.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -70,15 +74,21 @@ p {
     cursor: pointer;
 }
 
-.nav-link:active, .nav-link:hover {
+.navhov:active, .navhov:hover {
     border-top: 2px solid white;
+    transition: .2s;
+}
+
+.smhov i:active, .smhov i:hover{
+    transform: scale(1.2);
+    transition: .2s;
+    color: #ffd149;
 }
 
 .fab {
     margin-left: .7em;
     color: #dab33e;
 }
-
 
 
 /* Promo */
@@ -99,6 +109,12 @@ p {
     margin: 1em;
     text-transform: uppercase;
     padding: 20px 50px;
+    cursor: pointer;
+}
+
+.front-link:hover, .front-link:active {
+    background-color: #000000b8;
+    transition: .4s;
 }
 
 .bg-black {
@@ -120,7 +136,7 @@ p {
 /* About */
 #about {
     background-color: white;
-    background-image: url("/Assets/Img/basic_bg.png");
+    background-image: url("./Assets/Img/basic_bg.png");
     height: 700px;
     padding: 45px 0px;
 }
@@ -154,7 +170,7 @@ p {
 
 /* Ingredients */
 #ingredients {
-    background-image: url("/Assets/Img/ingredients_bg.jpeg");
+    background-image: url("./Assets/Img/ingredients_bg.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 800px;
@@ -201,7 +217,7 @@ p {
 
 /* Menu */
 #menu {
-    background-image: url("/Assets/Img/menu_pattern.png");
+    background-image: url("./Assets/Img/menu_pattern.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -284,7 +300,7 @@ p {
 
 /* Review */
 #reviews {
-    background-image: url("/Assets/Img/reviews_bg.jpeg");
+    background-image: url("./Assets/Img/reviews_bg.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 900px;
@@ -317,7 +333,7 @@ p {
 
 /* Reservation */
 #reservations {
-    background-image: url("/Assets/Img/basic_bg.png");
+    background-image: url("./Assets/Img/basic_bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     
@@ -547,6 +563,10 @@ footer {
         font-size: 30px;
     }
     
+    .nav-link {
+        font-size: 14px;
+    }
+    
     #promo {
         display: block;
         padding-bottom: 10px;
@@ -572,5 +592,10 @@ footer {
     .menu-right {
         margin: 0 20px;
         width: 100%;
+    }
+    
+    .outer-form {
+        flex-wrap: wrap;
+        justify-content: center;
     }
 }
